# nd2-python-flake

./: .gitignore  README.md  bound.py  czi_to_numpy.py  flake.nix  loop_gif.py  nd2convert.py  optimize.py  pyproject.toml  segment.ipynb  summ.py  to_avi.py  to_video.py  video_to_gif.py
