[project]
name = "nd2-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aicsimageio>=4.14.0",
    "aicspylibczi>=3.3.1",
    "fsspec>=2023.6.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.6",
    "nd2>=0.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pygifsicle",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.1",
    "scikit-image>=0.25.2",
]
